fix: drop incubator vector + reorder diagnostic VM unlocks
Boot layer init was failing on MC 1.21+ launch:
  Error occurred during initialization of boot layer

Root causes:
1. getHyperBoostProfile() unconditionally added
   --add-modules=jdk.incubator.vector and --enable-native-access,
   but PojavLauncher's bundled JRE 21 is stripped and does not
   include jdk.incubator.vector → boot layer rejects.
2. auroraSharedFlags() listed +UseFastUnorderedTimeStamps and
   GuaranteedSafepointInterval=0 BEFORE +UnlockDiagnosticVMOptions,
   so the JVM rejected those flags as 'diagnostic and must be
   enabled via UnlockDiagnosticVMOptions'.

Fix:
- Drop the two module flags from the hyper profile entirely.
- Move +UnlockDiagnosticVMOptions and +UnlockExperimentalVMOptions
  to the head of the v5 JIT polish block so subsequent diagnostic
  flags are accepted.

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>